fix: center align title in content section for improved layout

--- a/css/style.css
+++ b/css/style.css
@@ -728,6 +728,10 @@ body {
         margin-right: 30px;
     }
 
+    .content1__title {
+        text-align: center;
+    }
+
     .content-wrap:not(:last-child) {
         margin-bottom: 30vmax;
     }
